Kubernetes_excercises/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-deployment
  labels:
    app: mariadb
spec:
  serviceName: maria
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - image: docker.io/mariadb:10.4
          name: mariadb
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb-volume-1
            - mountPath: /etc/mysql/conf.d
              name: mariadb-datascientest-config-volume
      volumes:
        - emptyDir: {}
          name: mariadb-volume-1
        - configMap:
            name: mariadb-datascientest-config
            items:
              - key: max_allowed_packet.cnf
                path: max_allowed_packet.cnf
          name: mariadb-datascientest-config-volume
