Kubernetes_excercises/serviceLoadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: monserviceloadbalancer
spec:
  type: LoadBalancer
  clusterIP: 10.43.5.11
  loadBalancerIP: 168.196.90.10
  selector:
    app: nginx-deployment
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
