Kubernetes_excercises/serviceNodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: monservicenodeport
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
