Kubernetes_excercises/my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-sentiment-analysis-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: my-sentiment-analysis-service
      port:
        number: 8001
